Fixing scroll overflow of table actions
  * Fixes bug 925669

--- a/openstack-dashboard/dashboard/static/dashboard/css/style.css
+++ b/openstack-dashboard/dashboard/static/dashboard/css/style.css
@@ -264,8 +264,7 @@ a.current_item:hover h3, a.current_item:hover h4 {
 }
 
 .table_header {
-  overflow: auto; /* Triggers clearing if all contained elements are floated */
-  margin-bottom: 10px;
+  height: 30px;
 }
 
 .table_title h3, .table_header h3 {
@@ -380,6 +379,7 @@ table form {
 .table_actions {
     float: right;
     min-width: 400px;
+    margin-bottom: 10px;
 }
 
 .table_actions .table_search {
